# VisualGameStudioEngine

./: .gitignore  CLAUDE.md  IDE && cp CUsersmelvisourcereposVisualGameStudioEngineBasicLangbinReleasenet8.0BasicLang.exe CUsersmelvisourcereposVisualGameStudioEngineIDE  README.md  VisualGameStudioEngine.sln  fix_bool.ps1
.claude/: settings.local.json
BasicLang/: ASTNodes.cs  ASTPrettyPrinter.cs  BackendRegistry.cs  BasicLang.csproj  BasicLangLexer.cs  BasicLangRepl.cs  BasicLangRuntime.cs  CSharpBackend.cs  CSharpBackendDemo.cs  CodeGenOptions.cs  CompilationUnit.cs  Compiler.cs  CompilerPipelineDemo.cs  CompleteCompilerDemo.cs  ControlFlowGraph.cs  CppCapabilityChecker.cs  CppCodeGenerator.Split.cs  CppCodeGenerator.cs  Csharpcodegenerator.cs  DependencyGraph.cs  ERROR_MESSAGES_IMPROVEMENTS.md  ERROR_QUICK_REFERENCE.md  ErrorFormatter.cs  ErrorMessagesDemo.cs  ExternalLibraryLoader.cs  ForeignFeatureChecker.cs  ICodeGenerator.cs  IMPLEMENTATION_SUMMARY.md  IRBuilder.cs  IRInterpreter.cs  IRNodes.cs  IROperandWalker.cs  IROptimizer.cs  IRPipelineDemo.cs  IRPrettyPrinter.cs  LLVMBackend.cs  LexerTest.cs  MSILBackend.cs  ModuleRegistry.cs  ModuleResolver.cs  (+17 more)
BasicLang.VisualStudio/: BasicLang.VisualStudio.sln  README.md  build.ps1  diaspora-demo.code-workspace
BasicLangAgent/: CLAUDE.md  README.md  basiclang_agent.py  pyproject.toml
BuildOutput/: VisualGameStudio.deps.json
CPPengineTest/: Scene.cpp  (+7 more)
EngineAgent/: CLAUDE.md  README.md  engine_agent.py  pyproject.toml  requirements.txt
VSExtensionAgent/: CLAUDE.md  README.md  pyproject.toml  vsextension_agent.py
(+1113 files in other folders)
