[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engine-agent"
version = "1.0.0"
description = "Claude Agent SDK application for the C++ game engine and VB.NET wrapper"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
engine-agent = "engine_agent:main_cli"
