[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vsextension-agent"
version = "1.0.0"
description = "Claude Agent SDK application for the BasicLang VS 2022 extension"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
vsextension-agent = "vsextension_agent:main_cli"
